# social-reasoning-bench

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BENCHMARK_ANALYSIS.md  CONTRIBUTING.md  DEV.md  README.md  RELEASE_PLAN.md  SYNC.md  example.env  experiment.py  pyproject.toml  sync.py
archive/datasets/contextual_integrity/: contextual_integrity_results.json  pyproject.toml  run_eval.py
archive/datasets/contextual_integrity/contextual_integrity_eval/: client.py  evaluator.py  grader.py  prompt.py
archive/datasets/contextual_integrity/data/: download_dataset.py
archive/evaluations/gullibility/: pyproject.toml
archive/evaluations/privacy/: README.md  pyproject.toml
datasets/gullibility/: CLAUDE.md  README.md  batch_generate.py  config-template.yaml  crawler.py  game_context.txt  game_context_bob_persuasion.txt  game_context_interviewer.txt  generate_configs.py  generate_configs_calendar.py  generate_configs_form.py  generate_configs_from_csv.py  generate_strategies.py  pyproject.toml
datasets/gullibility/config_calendar/: Persuasion_strategy_000.yaml
datasets/gullibility/pages/: Argumentation theory.yaml  Debate.yaml  Deception.yaml  Influence.yaml  Manipulation _psychology_.yaml  Negotiation.yaml  Persuasion.yaml  Rhetoric.yaml  Social engineering _security_.yaml
datasets/gullibility/strategies/: Argumentation theory_strategies.yaml  Debate_strategies.yaml  Deception_strategies.yaml  Manipulation _psychology__strategies.yaml  Negotiation_strategies.yaml  Persuasion_strategies.yaml  Rhetoric_strategies.yaml  Social engineering _security__strategies.yaml
datasets/gullibility/strategies_calendar/: Persuasion_strategies.yaml
datasets/needle-in-the-groupchat/: .gitignore  pyproject.toml
datasets/needle-in-the-groupchat/needle_in_the_groupchat/: cli.py
datasets/needle-in-the-groupchat/needle_in_the_groupchat/evaluation/: __init__.py  results.py
datasets/needle-in-the-groupchat/needle_in_the_groupchat/formatting/: __init__.py  base.py  prefix.py  tools.py
datasets/needle-in-the-groupchat/needle_in_the_groupchat/generation/: base.py  preference.py  random.py
datasets/needle-in-the-groupchat/needle_in_the_groupchat/models/: __init__.py  conversation.py  (+2 more)
environments/coffee/: .env.example  analyze_results.py  batch_rollout.py  graph.py  main.py  nodes.py  plot_results.py  pyproject.toml
environments/coffee/config/: config-gemini.yaml  config-strategy.yaml  config-vllm.yaml
environments/coffee/docs/: design.md
environments/coffee/results/: blackmail_strategy_000.db  public_opinion_strategy_000.db
environments/coffee/utils/: call_llm.py
environments/open-vend/: README.md  pyproject.toml
environments/open-vend/tests/: test_economy.py  test_integration.py  test_state.py  test_suppliers.py
environments/sage/: README.md  pyproject.toml
environments/sage/html/: transcript-viewer.html
environments/sage/scripts/: convert_magpie_to_profiles.py  convert_personahub_to_profiles.py  extract_action_sequences.py
evaluations/sage-evals/: README.md  pyproject.toml
evaluations/sage-evals/sage_evals/: __main__.py
evaluations/sotopia/: README.md  pyproject.toml  run_evaluator.py
evaluations/sotopia/sotopia_evals/: __init__.py  clients.py  evaluator.py  prompts.py  types.py
sage-benchmark/: README.md  pyproject.toml  run_benchmark_matrix.sh  run_experiments.sh  run_form_experiments.sh
sage-benchmark/analysis/calendar_scheduling/: plot_pareto.py
sage-benchmark/analysis/form_filling/: plot_results.py
sage-benchmark/analysis/interviewer/: compare_benchmarks.py  plot_results.py
sage-benchmark/data/: Data_Format.md
sage-benchmark/data/calendar-scheduling/: calendar-tasks-artifacts.json  calendar-tasks-non-malicious.yaml  calendar-tasks.yaml  email-verification-test.yaml  malicious-digital-worker.yaml  privacy-probing-100.yaml  test-calendar-artifacts.json  test-calendar.yaml
sage-benchmark/data/form-filling/: _info.txt  form-tasks-generated.yaml  form-tasks.yaml
sage-benchmark/data/interviewer/: tasks.yaml
sage-benchmark/data_gen/: README.md
sage-benchmark/data_gen/calendar_scheduling/: cli.py  config.py  generate_preferences.py  models.py  validate.py  verify.py
sage-benchmark/experiments/: README.md
sage-benchmark/experiments/1-30-calendar_privacy_across_prompts/: Experiment.md  run_experiment.sh
sage-benchmark/experiments/2-10-calendar_negotiation/: Experiment.md
sage-benchmark/experiments/2-4-calendar_duty_of_care_simple/: Experiment.md
sage-benchmark/experiments/2-4-calendar_gullibility_strategies/: Experiment.md  run_experiment.sh
sage-benchmark/experiments/2-5-calendar_qwen_malicious/: Experiment.md  run_experiment.sh
sage-benchmark/experiments/backfire_experiment/: data_analysis.py
sage-benchmark/experiments/log_analyzer/: CLAUDE.md
sage-benchmark/html/: calendar_data_viewer.html  calendar_eval_comparison.html  calendar_eval_viewer.html
sage-benchmark/html/lib/: boxplot.js
sage-benchmark/sage_benchmark/calendar_scheduling/: README.md  cli.py  evaluator.py  loader.py  model_client.py  run_paths.py  runner.py  types.py
sage-benchmark/sage_benchmark/form_filling/: __init__.py  agent.py  cli.py  evaluator.py  interactive.py  loader.py  one_shot.py  prompts.py  runner.py  schemas.py  types.py  utils.py  visualization_result.py
sage-benchmark/sage_benchmark/interviewer/: __init__.py  __main__.py  cli.py  loader.py  runner.py  schemas.py  task.py  utils.py
sage-benchmark/sage_benchmark/shared/: __init__.py  cli_utils.py  executors.py  model_clients.py  schemas.py
sage-benchmark/tests/: test_calendar_resources.py  test_calendar_utils.py
sage-benchmark/tests/data/: test_calendar_scheduling_data.py  test_form_filling_data.py
sage-llm/: README.md  pyproject.toml
sage-llm/src/sage_llm/: __init__.py  client.py  token_manager.py  tracing.py  trapi.py
sage-llm/tests/phyagi/: test_reasoning_effort.py
sage-llm/tests/responses/: test_previous_response_id.py  test_thinking_preservation.py
sage-llm/tests/tracing/: test_tracing.py
sage-llm/tests/trapi/: test_api_version_matrix.py  test_reasoning_effort.py
(+5078 files in other folders)
