[project]
name = "sage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "huggingface-hub",
    "pandas",
    "rich>=14.0.0",
    "sage-environment",
    "needle-in-the-groupchat",
    "privacy-evals",
    "coffee-marketplace",
    "sotopia-evals",
    "gullibility-evals",
    "contextual-integrity-eval",
    "sage-benchmark",
    "open-vend",
]

[project.optional-dependencies]
torch = ["torch"]

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "pytest>=9.0.2",
    "ruff>=0.14.7",
    "yamkix>=0.14.0",
]
azure = [
    "azure-identity",
    "azure-storage-blob",
    "click",
    "regex",
]

[tool.uv.sources]
sage-environment = { workspace = true }
needle-in-the-groupchat = { workspace = true }
privacy-evals = { workspace = true }
coffee-marketplace = { workspace = true }
sotopia-evals = { workspace = true }
gullibility-evals = { workspace = true }
contextual-integrity-eval = { workspace = true }
sage-benchmark = { workspace = true }
open-vend = { workspace = true }
gullibility = { workspace = true }
sage-llm = { workspace = true }

[tool.uv.workspace]
members = [
    "environments/sage",
    "datasets/needle-in-the-groupchat",
    "evaluations/privacy",
    "environments/coffee",
    "evaluations/sotopia",
    "evaluations/gullibility",
    "datasets/contextual_integrity",
    "sage-benchmark",
    "environments/open-vend",
    "datasets/gullibility",
    "sage-llm",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "I",   # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poe.tasks]
format = "ruff format --check"
check = "ruff check"
yaml-check = { shell = "fail=0; git ls-files -z '*.yaml' '*.yml' | while IFS= read -r -d '' f; do if ! yamkix -n -S -s -i \"$f\" | diff -q - \"$f\" > /dev/null 2>&1; then echo \"Would reformat: $f\"; fail=1; fi; done; exit $fail" }
check-all = ["format", "check", "yaml-check"]
format-fix = "ruff format"
check-fix = "ruff check --fix"
yaml-fix = { shell = "git ls-files -z '*.yaml' '*.yml' | xargs -0 -I{} yamkix -n -S \"{}\"" }
fix-all = ["format-fix", "check-fix", "yaml-fix"]
