[project]
name = "sage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.81.5",
    "pandas",
    "rich>=14.0.0",
    "sage-benchmark",
]

[project.optional-dependencies]
torch = ["torch"]

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "pytest>=9.0.2",
    "ruff>=0.14.7",
    "yamkix>=0.14.0",
]
azure = [
    "azure-identity",
    "azure-storage-blob",
    "click",
    "regex",
]

[tool.uv.sources]
sage-benchmark = { workspace = true }
sage-llm = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/sage-benchmark",
    "packages/sage-llm",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "I",   # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poe.tasks]
format = "ruff format --check"
check = "ruff check"
yaml-check = { shell = "fail=0; git ls-files -z '*.yaml' '*.yml' | while IFS= read -r -d '' f; do if ! yamkix -n -S -s -i \"$f\" | diff -q - \"$f\" > /dev/null 2>&1; then echo \"Would reformat: $f\"; fail=1; fi; done; exit $fail" }
check-all = ["format", "check", "yaml-check"]
format-fix = "ruff format"
check-fix = "ruff check --fix"
yaml-fix = { shell = "git ls-files -z '*.yaml' '*.yml' | xargs -0 -I{} yamkix -n -S \"{}\"" }
fix-all = ["format-fix", "check-fix", "yaml-fix"]
