[project]
name = "sage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm<1.82.7",
    "pandas",
    "rich>=14.0.0",
    "sage-benchmark",
    "whimsygen",
    "privacy-judge",
]

[project.optional-dependencies]
torch = ["torch"]

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "pytest>=9.0.2",
    "ruff>=0.14.7",
]
azure = [
    "azure-identity",
    "azure-storage-blob",
    "click",
    "regex",
]

[tool.uv.sources]
sage-benchmark = { workspace = true }
sage-llm = { workspace = true }
privacy-judge = { workspace = true }
whimsygen = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/privacy-judge",
    "packages/sage-benchmark",
    "packages/sage-data-gen",
    "packages/sage-llm",
    "packages/whimsygen",
    "packages/privacy-judge",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "I",   # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poe.tasks]
format = "ruff format --check"
check = "ruff check"
check-all = ["format", "check"]
format-fix = "ruff format"
check-fix = "ruff check --fix"
fix-all = ["format-fix", "check-fix"]
