[project]
name = "sage-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.11.0",
    "google-genai>=1.55.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "litellm",
    "fastapi>=0.128.0", # Required for litellm
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "sage-llm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sage_benchmark"]

[tool.uv.sources]
litellm = { git = "https://github.com/BerriAI/litellm" }
sage-llm = { workspace = true }
