[project]
name = "gullibility"
version = "0.1.0"
description = "Pipeline for generating diverse strategic behaviors from Wikipedia content"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "pyyaml",
    "google-genai",
    "openai",
    "azure-identity",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
