[project]
name = "needle-in-the-groupchat"
version = "0.0.1"
description = "Evaluate how well OpenAI-compatible models recall which user said what in long conversations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.6.1",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["needle_in_the_groupchat"]
