[project]
name = "open-vend"
version = "0.1.0"
description = "Open source implementation of VendingBench - an AI agent that manages a vending machine business"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.18",
    "google-genai>=0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
