[project]
name = "sage-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.8.0",
    "icalendar>=6.0.0",
    "openai>=2.6.1",
    "datasets>=4.3.0",
    "magentic-marketplace",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/age_protocol", "src/calendar_generator", "src/sage_agents"]

[tool.uv.sources]
magentic-marketplace = { git = "https://github.com/microsoft/multi-agent-marketplace.git", subdirectory = "packages/magentic-marketplace" }
