[project]
name = "sage-evals"
version = "0.1.0"
description = "Evaluation metrics for Sage agents"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
sage_evals = "sage_evals.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sage_evals"]
