[project]
name = "gullibility-evals"
version = "0.1.0"
description = "Gullibility evaluation metrics."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
gullibility_evals = "gullibility_evals.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gullibility_evals"]
