[project]
name = "privacy-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm",
    "pydantic",
    "joblib",
    "openai"
]

# Remove or comment out the [project.optional-dependencies] section entirely

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["privacy_evals"]